--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@angular/cdk": "^17.0.0",
     "@angular/common": "^17.0.0",
     "@angular/compiler": "^17.0.0",
-    "@angular/core": "^17.0.0",
+    "@angular/core": "^16.0.0",
     "@angular/forms": "^17.0.0",
     "@angular/material": "^17.0.0",
     "@angular/platform-browser": "^17.0.0",
@@ -26,9 +26,11 @@
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.0",
+    "@angular-devkit/architect": "^0.1700.3",
+    "@angular-devkit/build-angular": "^16.2.10",
     "@angular/cli": "^17.0.0",
     "@angular/compiler-cli": "^17.0.0",
+    "@types/body-parser": "^1.19.5",
     "@types/jasmine": "~5.1.0",
     "angular-cli-ghpages": "^1.0.7",
     "jasmine-core": "~5.1.0",
