--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy": "ng deploy --base-href=/myFlixAngular/ && npx ngh --dir docs/"
+    "deploy": "ng deploy --base-href=/myFlixAngular/ && npx ngh --dir docs/",
+    "docs": "typedoc --out docs/src"
   },
   "private": true,
   "dependencies": {
@@ -37,6 +38,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "typedoc": "^0.25.3",
     "typescript": "~5.2.2"
   }
 }
